# final-nn

./: make_autoencoder.ipynb  pyproject.toml  requirements.txt
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
